[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.17"
regex = "1.7.0"

[lib]
name = "extras"
path = "src/extras/lib.rs"

[[bin]]
name = "day01"
path = "src/day01/day01.rs"

[[bin]]
name = "day02"
path = "src/day02/day02.rs"

[[bin]]
name = "day03"
path = "src/day03/day03.rs"

[[bin]]
name = "day04"
path = "src/day04/day04.rs"
